--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-typer[all]
-jsonpickle
-lxml
-jsonpath-ng
+packaging >= 23.1
+typer[all] >= 0.9.0
+jsonpickle >= 3.0.1
+lxml >= 4.9.2
+jsonpath-ng >= 1.5.3
